--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div></div>
         </div>
         <div class="button-container">
-            <button>Black</button>
+            <button onclick="changeColor('black')">Black</button>
             <button>Rainbow</button>
             <button>Custom</button>
-            <button>Eraser</button>
+            <button onclick="changeColor('white')">Eraser</button>
         </div>
     </div>
 </body>
