Add reset feature

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button>Rainbow</button>
             <button>Custom</button>
             <button onclick="changeColor('white')">Eraser</button>
+            <button onclick="resetBoard()">Reset</button>
         </div>
     </div>
 </body>
