Add slider to change pixel size of drawing board

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <button onclick="changeColor('white')">Eraser</button>
             <button onclick="resetBoard()">Reset</button>
         </div>
+        <div class="scale-container">
+            <p>Scale: <span id="sizeHTML">16</span></p>
+            <input class="size-slider" id="size-slider" type="range" min="8" max="64" value="16">
+        </div>
     </div>
 </body>
 </html>
