Add Rainbow button functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="button-container">
                 <button onclick="changeColor('black')">Black</button>
-                <button>Rainbow</button>
+                <button onclick="changeColor('rainbow')">Rainbow</button>
                 <button>Custom</button>
                 <button onclick="changeColor('white')">Eraser</button>
                 <button onclick="resetBoard()">Reset</button>
