Add style non-color buttons

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <div></div>
             </div>
             <div class="button-container">
-                <button onclick="changeColor('black')">Black</button>
-                <button onclick="changeColor('rainbow')">Rainbow</button>
-                <button>Custom</button>
-                <button onclick="changeColor('white')">Eraser</button>
-                <button onclick="resetBoard()">Reset</button>
+                <button class="black" onclick="changeColor('black')">Black</button>
+                <button class="rainbow" onclick="changeColor('rainbow')">Rainbow</button>
+                <button class="custom" >Custom</button>
+                <button class="utility" onclick="changeColor('white')">Eraser</button>
+                <button class="utility" onclick="resetBoard()">Reset</button>
             </div>
             <div class="scale-container">
                 <p>Scale: <span id="sizeHTML">16</span></p>
