Add custom color picker to HTML

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <button class="custom" >Custom</button>
                 <button class="utility" onclick="changeColor('white')">Eraser</button>
                 <button class="utility" onclick="resetBoard()">Reset</button>
+                <input type="color" id="customColor" onclick="changeColor(value)">
             </div>
             <div class="scale-container">
                 <p>Scale: <span id="sizeHTML">16</span></p>
